# semantic_kerne_azure_ai_foundry

./: README.md  pyproject.toml  rag-azure-openai-cosmosdb-notebook.ipynb  sample-env
advance/multi-agent-architecture/: multi_agent_system_with_agents_as_plugins.py
advance/rag-agent/: rag_chatbot.py
basic/: README.md  connection_with_ai_foundry.py
