[project]
name = "semantic-kerne-azure-ai-foundry"
version = "0.1.0"
description = ""
authors = [
    {name = "Biren-Mer-Simform",email = "biren.mer@simformsolutions.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "azure-identity (>=1.25.0,<2.0.0)",
    "semantic-kernel (>=1.36.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
